--- a/dicee.html
+++ b/dicee.html
@@ -5,8 +5,7 @@
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
-
-  </head>
+    </head>
   <body>
 
     <div class="container">
@@ -14,20 +13,20 @@
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="">
+        <img class="img1" src="images/dice6.png">
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="">
+        <img class="img2" src="images/dice6.png">
       </div>
 
     </div>
 
-
+   <script src="index.js" charset="utf-8"></script>
   </body>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    www 🎲 Ritik's Site 🎲 com
   </footer>
 </html>
